packages/libs/error-stack/tests/snapshots/test_debug__hooks__hook_defer@spantrace-backtrace.snap
---
source: tests/test_debug.rs
expression: "format!(\"{report:?}\")"
---

u64
| @ tests/test_debug.rs:296:14
|-> Root error
|   > @ tests/common.rs:140:5
|-> u16
|   > @ tests/test_debug.rs:297:14
|-> u32
|   > @ tests/test_debug.rs:295:14
|-> spantrace with 2 frames (1)
|   > @ tests/common.rs:140:5
\-> backtrace with 18 frames (1)
    > @ tests/common.rs:140:5

