packages/libs/error-stack/tests/snapshots/test_debug__hooks__hook_defer@spantrace-glyph.snap
---
source: tests/test_debug.rs
expression: "redact(&format!(\"{report:?}\"))"
---
u64
│ 📌 tests/test_debug.rs:354:14
├─▶ Root error
│   ╰ 📌 tests/common.rs:140:5
├─▶ u16
│   ╰ 📌 tests/test_debug.rs:355:14
├─▶ u32
│   ╰ 📌 tests/test_debug.rs:353:14
╰─▶ spantrace with 2 frames (1)
    ╰ 📌 tests/common.rs:140:5
