packages/libs/error-stack/tests/snapshots/test_debug__hooks__hook_incr.snap
---
source: tests/test_debug.rs
expression: "redact(&format!(\"{report:?}\"))"
---
0
| @ tests/test_debug.rs:396:14
|-> 1
|   > @ tests/test_debug.rs:395:14
|-> 2
|   > @ tests/test_debug.rs:394:14
\-> Root error
    > @ tests/common.rs:140:5
