packages/libs/error-stack/tests/snapshots/test_debug__hooks__hook_incr@backtrace-glyph.snap
---
source: tests/test_debug.rs
expression: "redact(&format!(\"{report:?}\"))"
---
0
│ tests/test_debug.rs:393:14
├─▶ 1
│   ╰ tests/test_debug.rs:392:14
├─▶ 2
│   ╰ tests/test_debug.rs:391:14
├─▶ Root error
│   ╰ tests/common.rs:140:5
╰─▶ backtrace with [n] frames (1)
    ╰ tests/common.rs:140:5
