packages/libs/error-stack/tests/snapshots/test_debug__hooks__hook_incr@glyph.snap
---
source: tests/test_debug.rs
expression: "redact(&format!(\"{report:?}\"))"
---
Root error
├╴tests/common.rs:147:5
├╴0
├╴1
╰╴2
