packages/libs/error-stack/tests/snapshots/test_debug__hooks__hook_incr@spantrace-glyph.snap
---
source: tests/test_debug.rs
expression: "format!(\"{report:?}\")"
---

0
│ 📌 tests/test_debug.rs:335:14
├─▶ 1
│   ╰ 📌 tests/test_debug.rs:334:14
├─▶ 2
│   ╰ 📌 tests/test_debug.rs:333:14
├─▶ Root error
│   ╰ 📌 tests/common.rs:140:5
╰─▶ spantrace with 2 frames (1)
    ╰ 📌 tests/common.rs:140:5

